--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -6,7 +6,80 @@
   }
 }
 
-// products-page css
+// // products-page css
+// .checkbox_brand {
+//   display: block;
+//   position: relative;
+//   padding-left: 35px;
+//   // margin-bottom: 12px;
+//   cursor: pointer;
+//   // font-size: 22px;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+// }
+
+// /* Hide the browser's default checkbox */
+// .checkbox_brand input {
+//   position: absolute;
+//   opacity: 0;
+//   cursor: pointer;
+//   height: 0;
+//   width: 0;
+// }
+
+// /* Create a custom checkbox */
+// .checkmark {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   height: 25px;
+//   width: 25px;
+//   background-color: transparent;
+//   border: solid 1px #ebebeb;  
+//   border-radius: 5px;
+// }
+
+// /* On mouse-over, add a grey background color */
+// .checkbox_brand:hover input ~ .checkmark {
+//   background-color: #ccc;
+// }
+
+// /* When the checkbox is checked, add a blue background */
+// .checkbox_brand input:checked ~ .checkmark {
+//   background-color: rgb(14 165 233);
+// }
+
+// /* Create the checkmark/indicator (hidden when not checked) */
+// .checkmark::after {
+//   content: "";
+//   position: absolute;
+//   display: none;
+// }
+
+// /* Show the checkmark when checked */
+// .checkbox_brand {
+//   input:checked ~ .checkmark::after {
+//     display: block;
+//   }
+// }
+
+// /* Style the checkmark/indicator */
+// .checkbox_brand .checkmark::after {
+//   left: 9px;
+//   top: 5px;
+//   width: 5px;
+//   height: 10px;
+//   border: solid 1px #ebebeb;
+//   background-color: transparent;
+//   border-width: 0 3px 3px 0;
+//   -webkit-transform: rotate(45deg);
+//   -ms-transform: rotate(45deg);
+//   transform: rotate(45deg);
+  
+// }
+
 .checkbox_brand {
   display: block;
   position: relative;
@@ -20,25 +93,22 @@
   user-select: none;
 }
 
-/* Hide the browser's default checkbox */
+/* Hide the browser's default radio button */
 .checkbox_brand input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
-  height: 0;
-  width: 0;
 }
 
-/* Create a custom checkbox */
+/* Create a custom radio button */
 .checkmark {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: transparent;
-  border: solid 1px #ebebeb;  
-  border-radius: 5px;
+  height: 23px;
+  width: 23px;
+  background-color: #eee;
+  border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
@@ -46,36 +116,29 @@
   background-color: #ccc;
 }
 
-/* When the checkbox is checked, add a blue background */
+/* When the radio button is checked, add a blue background */
 .checkbox_brand input:checked ~ .checkmark {
-  background-color: rgb(14 165 233);
+  background-color: #2196F3;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark::after {
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
-/* Show the checkmark when checked */
-.checkbox_brand {
-  input:checked ~ .checkmark::after {
-    display: block;
-  }
+/* Show the indicator (dot/circle) when checked */
+.checkbox_brand input:checked ~ .checkmark:after {
+  display: block;
 }
 
-/* Style the checkmark/indicator */
-.checkbox_brand .checkmark::after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid 1px #ebebeb;
-  background-color: transparent;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  
+/* Style the indicator (dot/circle) */
+.checkbox_brand .checkmark:after {
+ 	top: 8px;
+	left: 8px;
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	background: white;
 }
